--- a/css/main.css
+++ b/css/main.css
@@ -29,9 +29,10 @@ ul {
     height: auto;
     padding-top: 3em; 
     padding-bottom: 5em;
+    padding-left: 5em;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: left;
 }
 .header__title {
     align-items: center;
@@ -82,18 +83,6 @@ ul {
 .service__list {
     position: relative;
     max-width: 1170px;
-    height: auto;
-    margin: 0 auto;
-    display: flex;
-    display: -webkit-flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 0.5em;
-    padding-right: 2em;    
-}
-.service__twitter {
-    position: relative;
-    max-width: 300px;
     height: auto;
     margin: 0 auto;
     display: flex;
